--- a/answers/1.3
+++ b/answers/1.3
@@ -1,2 +1,2 @@
 docker build -t my-python-app .
-docker run -p 5000:5000 -e CURRENT_ENVIRONNEMENT=development my-python-app
+docker run -it my-python-app
