--- a/answers/1.9.2
+++ b/answers/1.9.2
@@ -1,3 +1,3 @@
 docker rename  djd951/lab-docker-djd951:my-py
 thon-app container_mypythonapp
-docker run -d -p 5000:5000 -e CURRENT_ENVIRONMENT=os.environ djd951/lab-docker-djd951:my-python-app
+docker run -d -p 5000:5000 -e CURRENT_ENVIRONMENT=os.environ container_mypythonapp
